# idcard-attendance-client

./: .gitignore  Cargo.toml
graphql/: attendance-rs-schema.graphql  create-user.graphql  list-users.graphql  log-attendance.graphql  update-user-alt-id.graphql  user-by-uuid.graphql
src/: colour_security.rs  config.rs  gql.rs  graphql.rs  keygen.rs  main.rs  tpm.rs
src/gui/: mod.rs  sign_in.rs  styles.css  unlock_keys.rs
