[package]
name = "idcard-attendance-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tss-esapi = "6.1"
bincode = "1"
rand_chacha = "0.3"
rand= { version = "0.8", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
directories = "4"
lazy_static = "1"
rpassword = "5"
